# active-citizen

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  formatters-cfg.toml  pyproject.toml
src/: alembic.ini  conftest.py
src/apps/ag/: __init__.py  tasks.py
src/apps/ag/tests/: __init__.py  conftest.py  test_api.py  test_web.py
src/apps/bot/: __init__.py  __main__.py  tasks.py
src/apps/bot/handlers/: __init__.py  admin.py  audit.py  (+7 more)
src/apps/worker/: __init__.py  app.py  utils.py
src/core/: __init__.py
src/core/dal/: __init__.py  files.py  pass_log.py  user.py
src/core/domains/: __init__.py  pass_log.py
src/core/models/: __init__.py  pass_log.py  task.py  user.py
src/core/services/: constants.py  user.py
src/infrastructure/: config.py
src/infrastructure/ag/: config.py
src/infrastructure/bot/: config.py  container.py  decorators.py  keyboards.py  permissions.py  templates.py
src/infrastructure/db/: base.py  config.py  types.py
src/infrastructure/logger/: config.py  utils.py
src/infrastructure/minio/: client.py  config.py
src/infrastructure/redis/: config.py
src/infrastructure/tests/: types.py
src/infrastructure/worker/: config.py  container.py
src/locale/: babel.cfg  messages.pot
src/utils/: config.py  dt.py  factory.py  lang.py  logger.py  math.py  pagination.py  permissions.py
src/utils/rpa/: __init__.py  api.py  exceptions.py  web.py
src/utils/telegram/: __init__.py  callback.py  context.py  decorators.py  filters.py  handlers.py  persistence.py  response.py  templates.py
src/utils/tests/: test_dt.py  test_math.py  test_pagination.py
(+71 files in other folders)
